--- a/resources/META-INF/plugin.xml
+++ b/resources/META-INF/plugin.xml
@@ -1,7 +1,7 @@
 <idea-plugin>
   <id>com.ribber.ideaNote</id>
   <name>IdeaNote</name>
-  <version>0.1</version>
+  <version>0.2</version>
   <vendor email="569894874@qq.com" url="http://ribber.github.com">ribber</vendor>
 
   <description>
@@ -15,11 +15,19 @@
         <li>Add a button in Markdown file editor,click it can extract selected text to a new note and leave a link</li>
         <li>Add an Action named "Find unlink file", find all file which hasn't another file link it</li>
         <li>Add a button in Project Tool Window，click it can open a note randomly</li>
+        <li>Add a context menu item in Find Tool Window, So You can add Markdown file link to find result</li>
       </ul>
     ]]>
   </description>
 
-  <change-notes></change-notes>
+  <change-notes>
+    <![CDATA[
+    0.2
+    <ul>
+      <li>Add a context menu item in Find Tool Window, So You can add Markdown file link to find result</li>
+    </ul>
+    ]]>
+  </change-notes>
 
   <!-- please see https://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html for description -->
   <idea-version since-build="193.0"/>
